--- a/package.json
+++ b/package.json
@@ -7,21 +7,27 @@
     "server": "node server/index.js",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "install-all": "npm install && cd client && npm install"
+    "install-all": "npm install && cd client && npm install",
+    "seed": "node server/seed.js"
   },
-  "keywords": ["health", "consultation", "telemedicine"],
+  "keywords": [
+    "health",
+    "consultation",
+    "telemedicine"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
-    "uuid": "^9.0.0",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.19.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1"
   }
-  
 }
