--- a/.env
+++ b/.env
@@ -1,3 +1,25 @@
 PORT=5000
 NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/curaline
+
+# Email Configuration
+# Choose provider: 'gmail', 'sendgrid', or 'smtp'
+EMAIL_PROVIDER=gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM_NAME=CuraLine Health
+
+# For SendGrid (alternative)
+# EMAIL_PROVIDER=sendgrid
+# SENDGRID_API_KEY=your-sendgrid-api-key
+
+# For Custom SMTP (alternative)
+# EMAIL_PROVIDER=smtp
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-smtp-user
+# SMTP_PASSWORD=your-smtp-password
+
+# Client URL (for email links)
+CLIENT_URL=http://localhost:3000
