--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "node server/index.js",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm install && npm run build",
+    "build": "npm install && cd client && npm install && npm run build",
     "install-all": "npm install && cd client && npm install",
     "seed": "node server/seed.js"
   },
