--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=5000
+﻿PORT=5000
 NODE_ENV=development
-MONGODB_URI=mongodb://localhost:27017/curaline
+MONGODB_URI=mongodb+srv://jasarenoelijah_db_user:mOVEYesO6tDV51CM@curaline.dvthh8z.mongodb.net/curaline?retryWrites=true&w=majority&appName=Curaline
 
 # Email Configuration
 # Choose provider: 'gmail', 'sendgrid', or 'smtp'
