--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "npm install && cd client && npm install && npm run build",
     "install-all": "npm install && cd client && npm install",
-    "seed": "node server/seed.js"
+    "seed": "node server/seed.js",
+    "test-connection": "node test-connection.js"
   },
   "keywords": [
     "health",
